# LLM-scraper-

./: .gitignore  Readme.md  docker-compose.yaml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
Db/: init.db  init.sql  init_pgvector.sh
backend/: Dockerfile  app.py  index.html  pyproject.toml  requirements.txt
backend/crawler/: free_crawler.py  scrapy_spider.py
backend/embedder/: embedding_utils.py
backend/graph/: domain.graphml  ontology_builder.py
backend/graph/viewer/: index.html
backend/llm/: pdf_form_filler.py  profile_extractor.py  prompt_templates.py  qa_with_profile.py  rag_pipeline.py
backend/mcp/: adapter.py  server.py  tools.py
backend/processor/: change_detector.py  cleaner.py  llm_form_filler.py  pdf_analyzer.py  pdf_downloader.py  pdf_form_filler.py
backend/static/: index.html
backend/templates/: index.html
backend/uploads/: README.md
backend/utils/: __init__.py  database.py  delegation_model.py  forwarder.py  ontology_router.py  quality_filter.py  user_utils.py  web_search.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.css  App.jsx  app.js
qqa-backend/: database.py  rag_router.py  rag_service.py
qqa-backend/src/api/routes/: rag.py
qqa-backend/src/models/: database.py
qqa-backend/src/services/: rag_service.py
