[tool.poetry]
name = "req"
version = "0.1.0"
description = ""
authors = ["randy@cvlcvc.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.1.1"
scrapy = "^2.13.2"
trafilatura = "^2.0.0"
uvicorn = "^0.34.3"
textract = "^1.6.5"
docx2txt = "^0.9"
sentence-transformers = "^4.1.0"
langchain = "^0.3.25"
langchain-core = "^0.3.65"
langchain-community = "^0.3.25"
langchain-postgres = "^0.0.14"
html-clean = "^0.0.4"
pypdf = "^5.6.0"
pdfkit = "^1.0.0"
requests = "^2.32.4"
werkzeug = "^3.1.3"
langdetect = "^1.0.9"
spacy = "^3.8.7"
python-dotenv = "^1.1.0"
playwright = "^1.52.0"
psycopg2 = "^2.9.10"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
